# token-scrooge

./: .gitignore  LICENSE  README.md  advanced.md  install.sh
.github/workflows/: release.yml
scrooge/: .gitignore  Cargo.toml
scrooge/src/: analytics.rs  cli.rs  config.rs  embeddings.rs  error.rs  format.rs  inject.rs  lib.rs  main.rs  protocol.rs  scoring.rs
scrooge/src/daemon/: client.rs  server.rs
scrooge/src/db/: facts.rs  migrations.rs  mod.rs  sessions.rs  stats.rs
scrooge/src/extract/: heuristic.rs  mod.rs  transcript.rs
scrooge/src/hooks/: mod.rs  prompt.rs  stop.rs
scrooge/src/models/: mod.rs  slm.rs
scrooge/tests/: integration.rs
