[package]
name = "scrooge"
version = "0.1.0"
edition = "2021"
description = "Zero-setup persistent memory for Claude Code"
license = "MIT"

[[bin]]
name = "scrooge"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5", features = ["derive", "color"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "1.0"
regex       = "1.10"
once_cell   = "1.19"
dirs        = "5.0"
uuid        = { version = "1.8", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
colored     = "2.1"
sha2        = "0.10"

[dev-dependencies]
tempfile    = "3"
serde_json  = "1.0"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
